# mmk-panel

./: .gitignore  backup.dump  flake.nix  pyproject.toml
src/mmk_panel/: settings.py
src/mmk_panel/apps/collectibles/: admin.py  filters.py  models.py  serializers.py  views.py
src/mmk_panel/apps/collectibles/migrations/: 0001_initial.py  0002_rarity_weight.py  0003_rarity_plate_color.py
